add code cuttings to page and some tidying up

--- a/app/main/views/main/index.html
+++ b/app/main/views/main/index.html
@@ -19,8 +19,8 @@
   <h4>operation</h4>
   <p>
   Choose a speed and series type.
-  Animation graduates redraws when the data changes.
-  Chart data and mixed types are randomly generated.
+  Animation graduates redraws as the data changes.
+  Series data and mixed types are randomly generated.
   </p>
   <h4>a little view code</h4>
   <pre>
